<resources>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">HCMUS Handbook</string>
    <string name="app_id">1687961114771211</string>
    <string name="copy_right">2015 @CS426</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_menu">Menu</string>
    <string name="action_exit">Exit</string>
    <string name="action_photo">My photos</string>
    <string name="action_logout">Logout</string>
    <string name="action_notification">Receive news</string>
    <string name="action_mylocation">My location</string>
    <string name="action_direction">Direction</string>

    <string name="message_new">News!</string>
    <string name="message_new_activity">New school\'s activty.</string>
    <string name="message_new_scholarship">New scholarship.</string>
    <string name="message_new_entertainment">New entertainment place.</string>
    <string name="message_new_photo">New photo in entertainment.</string>

    <string name="message_success">Success!</string>
    <string name="message_succeed_register">You are going to receive new notifications</string>
    <string name="message_succeed_unregister">You are no longer receive new notifications</string>
    <string name="message_error">Error! Please try again later</string>
    <string name="message_cancel">You have cancelled</string>
    <string name="message_error_network">Your phone is currently not connecting to internet</string>
    <string name="message_error_map">Cannot create Google Map API</string>
    <string name="message_error_gps">Your GPS is currently turned off</string>

    <string name="filter_type">Filter by type</string>
    <string name="filter_sch_type1">Support</string>
    <string name="filter_sch_type2">Long term</string>
    <string name="filter_sch_type3">Studying abroad</string>
    <string name="filter_sch_type4">Announcement/Result</string>
    <string name="filter_sch_expire">Show expired</string>
    <string name="filter_ent_type1">Breakfast/lunch vendor</string>
    <string name="filter_ent_type2">Cafe/Restaurant</string>
    <string name="filter_ent_type3">Other</string>
    <string name="filter_act_type1">Seminar/Interchange</string>
    <string name="filter_act_type2">Contest</string>
    <string name="filter_act_type3">Voluntary</string>
    <string name="filter_act_type4">Announcement/Result</string>

    <string name="main_activity">Activity</string>
    <string name="main_scholarship">Scholarship</string>
    <string name="main_entertainment">Entertainment</string>
    <string name="main_other">Other</string>

    <string name="detail_scholarship_about">About:</string>
    <string name="detail_scholarship_submit">Submit:</string>
    <string name="detail_scholarship_result">Result:</string>
    <string name="detail_scholarship_result_button">Open file/link attached</string>
    <string name="detail_scholarship_result_error">No file/link attached</string>
    <string name="detail_scholarship_submit_button">Submit via email</string>
    <string name="detail_scholarship_submit_error">Directly submit only</string>
    <string name="detail_scholarship_remind">Remind me:</string>
    <string name="detail_scholarship_deadline">Deadline date</string>
    <string name="detail_scholarship_receive">Receive result date</string>
    <string name="detail_scholarship_expired">Expired!</string>

    <string name="detail_activity_submit_button">Submit</string>
    <string name="detail_activity_occur">Occuring date</string>

    <string name="detail_entertainment_address">Address:</string>
    <string name="detail_entertainment_description">Description:</string>
    <string name="detail_entertainment_rating">Rating:</string>
    <string name="detail_entertainment_website">Website:</string>
</resources>
