<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#424242"
        android:orientation="vertical"
        tools:context="com.hgbao.hcmushandbook.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/layoutActivity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#ffff8d"
                    android:onClick="layoutClicked"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/section_activity" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFEB3B"
                        android:gravity="center"
                        android:text="@string/main_activity"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/main_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutScholarship"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:background="#ff8a80"
                    android:onClick="layoutClicked"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgScholarship"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/section_scholarship" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FF5252"
                        android:gravity="center"
                        android:text="@string/main_scholarship"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/main_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/layoutEntertainment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#b9f6ca"
                    android:onClick="layoutClicked"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEntertainment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/section_entertainment" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#1DE9B6"
                        android:gravity="center"
                        android:text="@string/main_entertainment"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/main_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutOther"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:background="#f5f5f5"
                    android:onClick="layoutClicked"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgOther"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/section_other" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#999999"
                        android:gravity="center"
                        android:text="@string/main_other"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/main_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:text="@string/copy_right"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/copy_right_size" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_main"
        app:menu="@menu/navigation_main" />

</android.support.v4.widget.DrawerLayout>